# configgle

./: .codespell-ignore  .gitignore  .pre-commit-config.yaml  AI_POLICY.md  CONTRIBUTING.md  README.md  RELEASING.md  copy.barista.toml  copybarista.sync.toml  pyproject.toml
.github/workflows/: package-validation.yml  publish-pypi.yml  sync-to-source.yml
configgle/: __init__.py  copy_on_write.py  custom_types.py  decorator.py  fig.py  inline.py  pprinting.py  serialize.py  traverse.py  walk.py
docs/: demonstrate_typing_techniques.py  jsonpickle.md  test_basedtyping_intersection.py  ty_missing_features.md
tests/: serialize_test.py  test_copy_on_write.py  test_decorator.py  test_fig.py  test_inline.py  test_make_return_type.py  test_pprinting.py  test_serialize.py  test_traverse.py  walk_test.py
typings/cloudpickle/: __init__.pyi
typings/ty_extensions/: __init__.py  __init__.pyi
