[project]
name = "configgle"
version = "1.1.10"
description = "Type-safe hierarchical experiment configuration using pure Python dataclass factories and dependency injection."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Joshua V. Dillon" },
]
license = "Apache-2.0"
keywords = ["ai", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ty-extensions",
    "wrapt",
]

[dependency-groups]
debug = [
    "gnureadline",
    "ipdb",
    "ipython",
    "matplotlib",
    "numpy>=2.1",
    "scipy",
]
lint = [
    "codespell>=2.2.4",
    "pre-commit>=3.5",
    "ruff>=0.8",
    "vulture",  # checks for unused code
]
publish = [
    "build",
    "twine",
]
stubs = [
]
test = [
    "cloudpickle",
    "pytest-cov",
    "pytest>=7.0",
]
typing = [
    "basedpyright>=1.10",
    "basedtyping>=0.1.10",
    "ty",
    "typing_extensions",
]
dev = [
    {include-group = "lint"},
    {include-group = "publish"},
    {include-group = "stubs"},
    {include-group = "test"},
    {include-group = "typing"},
]

[project.urls]
Repository = "https://github.com/jvdillon/configgle"
Issues = "https://github.com/jvdillon/configgle/issues"
Discussions = "https://github.com/jvdillon/configgle/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["configgle"]
artifacts = ["configgle/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-Werror"
norecursedirs = [".venv", "__pycache__", "*.egg-info"]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
fix = true
show-fixes = true
line-length = 88
output-format = "concise"
target-version = "py312"
exclude = [".venv", "*.egg-info", ".pytest_cache", "build", "dist"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Module-level ignores
    "ANN",     # flake8-annotations - we use pyright for type checking
    "C90",     # mccabe complexity - one function slightly over threshold
    "COM812",  # missing trailing comma - conflicts with formatter

    # Docstring rules - not enforcing strict docstring requirements
    "D100",    # undocumented public module
    "D101",    # undocumented public class
    "D102",    # undocumented public method
    "D103",    # undocumented public function
    "D104",    # undocumented public package
    "D105",    # undocumented public magic method
    "D106",    # undocumented public nested class
    "D107",    # undocumented public init
    "D203",    # incorrect blank line before class (conflicts with D211)
    "D205",    # blank line required between summary line and description
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "D400",    # docstring should end with period
    "D401",    # docstring imperative mood
    "D415",    # docstring should end with period
    "D417",    # missing argument in docstring

    # Style choices
    "A002",    # function argument shadowing builtin (we use 'repr' as param name)
    "E501",    # line too long (formatter handles this)
    "EM101",   # exception must not use string literal
    "EM102",   # exception must not use f-string literal
    "ERA001",  # commented-out code (we have intentional examples)
    "FBT001",  # boolean positional argument
    "FBT002",  # boolean default positional argument
    "FBT003",  # boolean positional value in call
    "INP001",  # implicit namespace package (tests don't need __init__.py)
    "N806",    # variable should be lowercase (we use Config as variable name)
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value in comparison (common in tests)
    "RET504",  # unnecessary assignment before return
    "T201",    # print found (used for debug mode in CopyOnWrite)
    "TC001",   # move import to type-checking block
    "TC003",   # move import to type-checking block
    "TC006",   # runtime-cast-value
    "TRY003",  # long exception messages
    "TRY300",  # consider moving to else block
]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
default-section = "third-party"
detect-same-package = true
force-single-line = false
force-sort-within-sections = false
from-first = true
lines-between-types = 1
lines-after-imports = 2
extra-standard-library = ["typing", "typing_extensions", "ty_extensions"]
known-first-party = ["configgle"]
no-lines-before = ["future"]
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"packages/*" = [
    "PYI018",  # "unused" TypeVars are intentional polyfill exports
]
"docs/*" = [
    "S101",    # use of assert (demo code)
    "UP046",   # generic class uses Generic subclass (intentional)
    "UP047",   # generic function should use type params (intentional)
]
"tests/*" = [
    "S101",    # use of assert
    "S301",    # pickle unsafe
    "SLF001",  # private member access
]

[tool.basedpyright]
typeCheckingMode = "recommended"
extraPaths = ["."]
exclude = [".venv", "*.egg-info", ".pytest_cache", "build", "dist"]
ignore = [".venv", "*.egg-info", ".pytest_cache", "build", "dist"]
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false  # Otherwise conflicts with Ruff ISC003 explicit-string-concatenation.
reportInvalidCast = false  # cast() is always intentional; double-casting through object is noise.
reportUnannotatedClassAttribute = false
reportUnusedCallResult = false

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportPrivateLocalImportUsage = false

[[tool.basedpyright.executionEnvironments]]
# docs/ files are exploratory typing demos -- relax strict checks
root = "docs"
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportInvalidTypeVarUse = false
reportReturnType = false
reportUninitializedInstanceVariable = false
reportUnknownMemberType = false
reportUnknownParameterType = false

[tool.ty.environment]
python-version = "3.12"

# docs/ files are exploratory typing demos -- relax strict checks
[[tool.ty.overrides]]
include = ["docs/**"]

[tool.ty.overrides.rules]
empty-body = "ignore"
invalid-return-type = "ignore"
invalid-type-form = "ignore"
invalid-type-guard-definition = "ignore"
unresolved-attribute = "ignore"

[tool.codespell]
builtin = "clear,rare,code"
ignore-words-list = "fave,coo,jupyter,arange,iff,wrt,ow,lite,falsy,truthy,ws,deque"
skip = "htmlcov,.doctrees,*.pyc,*.ico,*.png,*.jpg,*.PNG,*.inv,*.dot,*.css,.git,.venv,__pycache__,*.egg-info,uv.lock"

[tool.uv]
package = true

[tool.uv.pip]
compile-bytecode = true

[tool.uv.sources]
ty-extensions = { path = "packages/ty-extensions" }
