[project]
name = "configgle"
version = "1.2.2"
description = "Type-safe hierarchical experiment configuration using pure Python dataclass factories and dependency injection."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Joshua V. Dillon"},
]
license = "Apache-2.0"
keywords = ["ai", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "wrapt",
]

[dependency-groups]
debug = [
    "gnureadline",
    "ipdb",
    "ipython",
    "matplotlib",
    "numpy>=2.1",
    "scipy",
]
lint = [
    "codespell>=2.2.4",
    "pre-commit>=3.5",
    "ruff>=0.8",
    "vulture",  # checks for unused code
]
publish = [
    "build",
    "twine",
]
stubs = [
]
test = [
    "cloudpickle",
    "pytest-cov",
    "pytest>=7.0",
]
typing = [
    "basedpyright>=1.10",
    "basedtyping>=0.1.10",
    "ty",
    "typing_extensions",
]
dev = [
    {include-group = "lint"},
    {include-group = "publish"},
    {include-group = "stubs"},
    {include-group = "test"},
    {include-group = "typing"},
]

[project.urls]
Repository = "https://github.com/rekursiv-ai/configgle"
Issues = "https://github.com/rekursiv-ai/configgle/issues"
Discussions = "https://github.com/rekursiv-ai/configgle/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["configgle", "ty_extensions"]
artifacts = ["configgle/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-Werror"
norecursedirs = [
    ".venv",
    "__pycache__",
    "*.egg-info",
    "typings",
]

[tool.coverage.run]
omit = [
    "*_test.py",
    "*/tests/*",
    "*/.venv/*",
    "*/typings/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
fix = true
show-fixes = true
line-length = 88
output-format = "concise"
target-version = "py312"
exclude = [
    ".venv",
    "*.egg-info",
    ".pytest_cache",
    "build",
    "dist",
    "typings",
]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Module-level ignores.
    "ANN",     # Flake8 annotations. (We use pyright for type checking.)
    "C90",     # McCabe complexity. (One function slightly over threshold.)
    "COM812",  # Missing trailing comma. (Conflicts with formatter.)

    # Relax docstring rules.
    "D100",    # Undocumented public module.
    "D101",    # Undocumented public class.
    "D102",    # Undocumented public method.
    "D103",    # Undocumented public function.
    "D104",    # Undocumented public package.
    "D105",    # Undocumented magic method.
    "D106",    # Undocumented public nested class.
    "D107",    # Undocumented public init.
    "D203",    # Incorrect blank line before class. (Conflicts with D211.)
    "D205",    # Missing blank line after summary.
    "D213",    # Multi-line summary second line. (Conflicts with D212.)
    "D400",    # Missing trailing period.
    "D401",    # Non-imperative mood.
    "D415",    # Missing terminal punctuation.
    "RUF002",  # Ambiguous unicode character docstring. (Intentional math usage of `α, σ, η, ε, ≝, ½` etc.)
    "RUF003",  # Ambiguous unicode character comment. (Intentional math usage of `α, σ, η, ε, ≝, ½` etc.)

    # Standard style relaxations.
    "A002",    # Builtin argument shadowing.
    "E501",    # Line too long. (Will be fixed by formatter.)
    "EM101",   # Raw string in exception.
    "EM102",   # F-string in exception.
    "ERA001",  # Commented-out code.
    "FBT001",  # Boolean type hint positional argument.
    "FBT002",  # Boolean default value positional argument.
    "FBT003",  # Boolean positional value in call.
    "FIX002",  # Line contains TODO. (Too verbose descriptions of TODOs.)
    "N806",    # Non-lowercase variable in function.
    "PLR0912", # Too many branches.
    "PLR0913", # Too many arguments.
    "PLR0915", # Too many statements.
    "PLR2044", # Empty comment. (Helps to break-up long lists.)
    "PLW0642", # Self or cls assignment. (Reassignment of name in finalize.)
    "RET504",  # Unnecessary assign.
    "TC001",   # Typing-only first-party import. (Will be fixed by formatter.)
    "TC003",   # Typing-only standard library import. (Will be fixed by formatter.)
    "TC006",   # Runtime cast value.
    "TD003",   # Missing TODO link.
    "TRY003",  # Raise vanilla args.
    "TRY300",  # Try consider else.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # Unused import.
]
"{*_test.py,tests/*}" = [
    "INP001",  # Implicit namespace package. (Tests don't need __init__.py.)
    "PLR2004", # Magic value comparison.
    "S101",    # Use of `assert` detected.
    "S301",    # Suspicious pickle usage.
    "SLF001",  # Private member access.
]
"docs/*" = [
    "INP001",  # Implicit namespace package. (Docs don't need __init__.py.)
    "S101",    # Assert. (Demo code.)
    "T201",    # Print found. (CLI tools use print for output.)
    "UP046",   # Non-PEP695 generic class. (Intentional.)
    "UP047",   # Non-PEP695 generic function. (Intentional.)
]
"{packages/*,ty_extensions/*}" = [
    "PYI018",  # Unused private type var. (Intentional polyfill exports.)
]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
default-section = "third-party"
detect-same-package = true
force-single-line = false
force-sort-within-sections = false
from-first = true
lines-between-types = 1
lines-after-imports = 2
extra-standard-library = ["typing", "typing_extensions", "ty_extensions"]
known-first-party = ["configgle"]
no-lines-before = ["future"]
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
# extraPaths = ["."]
exclude = [
    ".venv",
    "*.egg-info",
    ".pytest_cache",
    "build",
    "dist",
    "typings",
]
ignore = [
    ".venv",
    "*.egg-info",
    ".pytest_cache",
    "build",
    "dist",
    "typings",
]
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportAny = false                          # `Any` propagation is pervasive in PyTorch.
reportExplicitAny = false                  # Explicit `Any` annotations are intentional.
reportImplicitStringConcatenation = false  # Conflicts with ruff ISC003.
reportInvalidCast = false                  # All cast() calls are intentional.
reportPrivateUsage = false                 # Redundant with ruff SLF001.
reportUnannotatedClassAttribute = false    # Class attributes don't always need annotations.
reportUnusedCallResult = false             # Discarding return values is idiomatic Python.
reportUnusedImport = false                 # Redundant with ruff F401.

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportPrivateLocalImportUsage = false

[[tool.basedpyright.executionEnvironments]]
root = "docs"
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportInvalidTypeVarUse = false
reportReturnType = false
reportUninitializedInstanceVariable = false
reportUnknownMemberType = false
reportUnknownParameterType = false

[tool.ty.src]
exclude = [
    ".venv",
    "*.egg-info",
    ".pytest_cache",
    "build",
    "dist",
    "typings",
]

[tool.ty.environment]
python-version = "3.12"
# extra-paths = ["typings"]

[tool.ty.terminal]
error-on-warning = true
# output-format = "concise"   # full concise gitlab github junit

[tool.ty.rules]
all = "warn"

[[tool.ty.overrides]]
include = ["docs/**"]

[tool.ty.overrides.rules]
all = "error"
empty-body = "ignore"
invalid-return-type = "ignore"
invalid-type-form = "ignore"
invalid-type-guard-definition = "ignore"
unresolved-attribute = "ignore"

[tool.codespell]
# SKIP=codespell git commit -m "message"
# or,
# some_variable_with_typo = "connexion"  # codespell:ignore
builtin = "clear,rare,code"
ignore-words-list = "fave,coo,jupyter,arange,iff,wrt,ow,lite,falsy,truthy,ws,deque"
skip = "htmlcov,.doctrees,*.pyc,*.ico,*.png,*.jpg,*.PNG,*.inv,*.dot,*.css,.git,.venv,__pycache__,*.egg-info,uv.lock"

[tool.uv]
package = true

[tool.uv.pip]
compile-bytecode = true
